--- a/mystyles.css
+++ b/mystyles.css
@@ -6,12 +6,12 @@ margin: .25in;
 padding: .25in;
 }
 
-main {
+/* main {
     margin-left: 15%;
     margin-right: 15%;
     padding-left: 15%;
     padding-right: 15%;
-}
+} */
 
 h1 {
 color: black;
