--- a/mystyles.css
+++ b/mystyles.css
@@ -21,13 +21,13 @@ font-family: 'Merriweather';
 
 p1 {
 color: black;
-font-size: 9pt;
+font-size: 10pt;
 font-family: 'Open Sans';
 }
 
 p2 {
 color: blue;
-font-size: 9pt;
+font-size: 10pt;
 font-family: 'Open Sans';
 }
 
@@ -38,7 +38,7 @@ p2:after {
 
 p3 {
 color: black;
-font-size: 11pt;
+font-size: 14pt;
 font-family: 'Merriweather';
 }
 
@@ -48,9 +48,9 @@ p3:after {
 }
 
 p4 {
-color : gray;
-font-size: 9pt;
-font-family: "Merriweather';
+color : #555555;
+font-size: 10pt;
+font-family: 'Merriweather';
 }
 
 p4:after {
